@@ -1593,8 +1593,8 @@ MS_DLL_EXPORT const char *msCaseFindSubstring(const char *haystack, const char *
 MS_DLL_EXPORT int msHexToInt(char *hex);
 MS_DLL_EXPORT char *msGetEncodedString(const char *string, const char *encoding);
 MS_DLL_EXPORT char *msConvertWideStringToUTF8 (const wchar_t* string, const char* encoding);
-MS_DLL_EXPORT int msGetNextUTF8Char(const char **in_ptr, char *out_string);
-MS_DLL_EXPORT int msGetNumUTF8Chars(const char *in_ptr);
+MS_DLL_EXPORT int msGetNextGlyph(const char **in_ptr, char *out_string);
+MS_DLL_EXPORT int msGetNumGlyphs(const char *in_ptr);
 MS_DLL_EXPORT int msGetUnicodeEntity(const char *inptr, int *unicode);
 MS_DLL_EXPORT int msUTF8ToUniChar(const char *str, int *chPtr); /* maptclutf.c */
 
