@@ -1188,14 +1188,25 @@ char* msConvertWideStringToUTF8 (const wchar_t* string, const char* encoding) {
 }
 
 /*
-** Returns the next UTF-8 char in string and advances *in_ptr to the next
+** Returns the next glyph in string and advances *in_ptr to the next
 ** character.
 **
 ** If out_string is not NULL then the character (bytes) is copied to this 
 ** buffer and null-terminated. out_string must be a pre-allocated buffer of
-** at least 7 bytes.
+** at least 11 bytes.
 **
-** The function returns the number of bytes in this UTF-8 character.
+** The function returns the number of bytes in this glyph.
+**
+** This function treats 3 types of glyph encodings:
+*   - as an html entity, for example &#123; or &#x1af;
+*   - as an utf8 encoded character
+*   - if utf8 decoding fails, as a raw character
+* 
+** This function mimics the character decoding function used in gdft.c of 
+* libGD. It is necessary to have the same behaviour, as input strings must be
+* split into the same glyphs as what gd does.
+* TODO: GD also treats html glyphs of the type &eacute; , &amp; , &nbsp; etc.
+*   This should be accounted for in this function
 **
 ** In UTF-8, the number of leading 1 bits in the first byte specifies the 
 ** number of bytes in the entire sequence.
@@ -1208,71 +1219,126 @@ char* msConvertWideStringToUTF8 (const wchar_t* string, const char* encoding) {
 ** U-00200000 U-03FFFFFF: 111110xx 10xxxxxx 10xxxxxx 10xxxxxx 10xxxxxx
 ** U-04000000 U-7FFFFFFF: 1111110x 10xxxxxx 10xxxxxx 10xxxxxx 10xxxxxx 10xxxxxx
 */
-int msGetNextUTF8Char(const char **in_ptr, char *out_string)
+int msGetNextGlyph(const char **in_ptr, char *out_string)
 {
     unsigned char in;
-    int numbytes=0;
+    int numbytes=0,unicode;
     int i;
 
     in = (unsigned char)**in_ptr;
 
     if (in == 0)
         return -1;  /* Empty string */
-
-    if (in < 0x80)
-    {
-        numbytes = 1;   /* 0xxxxxxx */
+    if((numbytes=msGetUnicodeEntity(*in_ptr,&unicode))>0) {
+        if(out_string) {
+            for(i=0;i<numbytes;i++) {
+                out_string[i]=(*in_ptr)[i];
+            }
+            out_string[numbytes]='\0';
+        }
+        *in_ptr+=numbytes;
+        return numbytes;
     }
-    else if ((in & 0xC0) == 0x80)
-    {
-        /* 10xxxxxx - this is not the first byte of a UTF-8 char, we need to 
-         * resynchronize . For now just return -1.
-         */
-        numbytes = 1;
-        return -1;
+    if (in < 0xC0)
+    {/*
+     * Handles properly formed UTF-8 characters between
+     * 0x01 and 0x7F.  Also treats \0 and naked trail
+     * bytes 0x80 to 0xBF as valid characters representing
+     * themselves.
+     */
+        /*goto end of loop to return just the char*/
     }
-    else if ((in & 0xE0) == 0xC0)
+    else if (in < 0xE0)
     {
-        numbytes = 2;   /* 110xxxxx 10xxxxxx */
+        if (((*in_ptr)[1]& 0xC0) == 0x80) {
+            if(out_string) {
+                out_string[0]=in;
+                out_string[1]=(*in_ptr)[1];
+                out_string[2]='\0';
+            }
+            *in_ptr+=2;
+            return 2; /*110xxxxx 10xxxxxx*/
+        }
     }
-    else if ((in & 0xF0) == 0xE0)
+    else if (in < 0xF0)
     {
-        numbytes = 3;   /* 1110xxxx 10xxxxxx 10xxxxxx */
+        if (((*in_ptr)[1]& 0xC0) == 0x80 && ((*in_ptr)[2]& 0xC0) == 0x80) {
+            if(out_string) {
+                out_string[0]=in;
+                *in_ptr+=numbytes;  out_string[1]=(*in_ptr)[1];
+                out_string[2]=(*in_ptr)[2];
+                out_string[3]='\0';
+            }
+            *in_ptr+=3;
+            return 3;   /* 1110xxxx 10xxxxxx 10xxxxxx */
+        }
     }
-    else if ((in & 0xF8) == 0xF0)
+    else if (in < 0xF8)
     {
-        numbytes = 4;   /* 11110xxx 10xxxxxx 10xxxxxx 10xxxxxx */
+        if (((*in_ptr)[1]& 0xC0) == 0x80 && ((*in_ptr)[2]& 0xC0) == 0x80 
+                && ((*in_ptr)[3]& 0xC0) == 0x80) {
+            if(out_string) {
+                out_string[0]=in;
+                out_string[1]=(*in_ptr)[1];
+                out_string[2]=(*in_ptr)[2];
+                out_string[3]=(*in_ptr)[3];
+                out_string[4]='\0';
+            }
+            *in_ptr+=4;
+            return 4;   /* 11110xxx 10xxxxxx 10xxxxxx 10xxxxxx */
+        }
     }
-    else if ((in & 0xFC) == 0xF8)
+    else if (in < 0xFC)
     {
-        numbytes = 5;   /* 111110xx 10xxxxxx 10xxxxxx 10xxxxxx 10xxxxxx */
+        if (((*in_ptr)[1]& 0xC0) == 0x80 && ((*in_ptr)[2]& 0xC0) == 0x80 
+                && ((*in_ptr)[3]& 0xC0) == 0x80 && ((*in_ptr)[4]& 0xC0) == 0x80) {
+            if(out_string) {
+                out_string[0]=in;
+                out_string[1]=(*in_ptr)[1];
+                out_string[2]=(*in_ptr)[2];
+                out_string[3]=(*in_ptr)[3];
+                out_string[4]=(*in_ptr)[4];
+                out_string[5]='\0';
+            }
+            *in_ptr+=5;
+            return 5;   /* 111110xx 10xxxxxx 10xxxxxx 10xxxxxx 10xxxxxx */
+        }
     }
-    else if ((in & 0xFE) == 0xFC)
+    else if (in < 0xFE)
     {
-        numbytes = 6;   /* 1111110x 10xxxxxx 10xxxxxx 10xxxxxx 10xxxxxx 10xxxxxx */
+        if (((*in_ptr)[1]& 0xC0) == 0x80 && ((*in_ptr)[2]& 0xC0) == 0x80 
+                && ((*in_ptr)[3]& 0xC0) == 0x80 && ((*in_ptr)[4]& 0xC0) == 0x80
+                && ((*in_ptr)[5]& 0xC0) == 0x80) {
+            if(out_string) {
+                out_string[0]=in;
+                out_string[1]=(*in_ptr)[1];
+                out_string[2]=(*in_ptr)[2];
+                out_string[3]=(*in_ptr)[3];
+                out_string[4]=(*in_ptr)[4];
+                out_string[5]=(*in_ptr)[5];
+                out_string[6]='\0';
+            }
+            *in_ptr+=6;
+            return 6;   /* 1111110x 10xxxxxx 10xxxxxx 10xxxxxx 10xxxxxx 10xxxxxx */
+        }
     }
-
-    /* Advance input buffer and copy the bytes to out_string if one is set */
-    for(i=0; i<numbytes && **in_ptr != '\0'; i++)
-    {
-        if (out_string)
-            out_string[i] = **in_ptr;
-        (*in_ptr)++;
+    
+    if (out_string) {
+        out_string[0]=in;
+        out_string[1] = '\0';   /* 0xxxxxxx */
     }
-    if (out_string)
-        out_string[i] = '\0';
-
-    return numbytes;
+    (*in_ptr)++;
+    return 1;
 }
 
 /*
-** Returns the number of UTF-8 chars in string
+** Returns the number of glyphs in string
 */
-int msGetNumUTF8Chars(const char *in_ptr)
+int msGetNumGlyphs(const char *in_ptr)
 {
     int numchars=0;
 
-    while( msGetNextUTF8Char(&in_ptr, NULL) != -1 )
+    while( msGetNextGlyph(&in_ptr, NULL) != -1 )
         numchars++;
 
     return numchars;
@@ -1295,22 +1361,17 @@ int msGetUnicodeEntity(const char *inptr, int *unicode) {
             in++;
             if(*in=='x'||*in=='X') {
                 in++;
-                for(l=3;l<7;l++) {
+                for(l=3;l<8;l++) {
                     char byte;
-                    if(*in>='0'&&*in<='9') {
+                    if(*in>='0'&&*in<='9')
                         byte = *in - '0';
-                        in++;
-                    } 
-                    else if(*in>='a'&&*in<='f') {
+                    else if(*in>='a'&&*in<='f')
                         byte = *in - 'a' + 10;
-                        in++;
-                    } 
-                    else if(*in>='A'&&*in<='F') {
+                    else if(*in>='A'&&*in<='F')
                         byte = *in - 'A' + 10;
-                        in++;
-                    }
                     else
                         break;
+                    in++;
                     val = (val * 16) + byte;
                 }
                 if(*in==';' && l>3 ) {
@@ -1320,7 +1381,7 @@ int msGetUnicodeEntity(const char *inptr, int *unicode) {
             } 
             else
             {
-                for(l=2;l<7;l++) {
+                for(l=2;l<8;l++) {
                     if(*in>='0'&&*in<='9') {
                         val = val*10+*in-'0';
                         in++;
